--- a/sarupriya/Task8/style.css
+++ b/sarupriya/Task8/style.css
@@ -129,3 +129,25 @@ body{
 .fa-right-long{
     color: #f5f5ce;
 }
+
+@media screen and (min-width:320px) and (max-width:480px){
+    .nofloat{
+        float: none;
+        width: 100%;
+    }
+
+}
+@media screen and (min-width:481px) and (max-width:560px){
+    .nofloat{
+        float: none;
+        width: 100%;
+    }
+
+}
+
+/* 320px to 480px
+481px to 560px
+561px to 620px
+621px to 768px
+768px to 992px
+993px to 1024px */
