--- a/sarupriya/Task8/style.css
+++ b/sarupriya/Task8/style.css
@@ -129,3 +129,47 @@ body{
 .fa-right-long{
     color: #f5f5ce;
 }
+
+
+
+@media screen and (min-width:320px) and (max-width:480px){
+    .nofloat{
+        float: none;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width:481px) and (max-width:560px){
+    .nofloat1{
+        float: none;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width:561px) and (max-width:620px){
+    .nofloat2{
+        float: none;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width:621px) and (max-width:768px){
+    .nofloat3{
+        float: none;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width:769px) and (max-width:992px){
+    .nofloat4{
+        float: none;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width:993px) and (max-width:1024px){
+    .nofloat5{
+        float: none;
+        width: 100%;
+    }
+}
