--- a/sarupriya/Task8/style.css
+++ b/sarupriya/Task8/style.css
@@ -135,6 +135,7 @@ body{
 @media screen and (min-width:320px) and (max-width:480px){
     .nofloat{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -142,6 +143,7 @@ body{
 @media screen and (min-width:481px) and (max-width:560px){
     .nofloat1{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -149,6 +151,7 @@ body{
 @media screen and (min-width:561px) and (max-width:620px){
     .nofloat2{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -156,6 +159,7 @@ body{
 @media screen and (min-width:621px) and (max-width:768px){
     .nofloat3{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -163,6 +167,7 @@ body{
 @media screen and (min-width:769px) and (max-width:992px){
     .nofloat4{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -170,6 +175,7 @@ body{
 @media screen and (min-width:993px) and (max-width:1024px){
     .nofloat5{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
