--- a/sarupriya/Task7/style.css
+++ b/sarupriya/Task7/style.css
@@ -143,6 +143,13 @@ a{
         margin-top: 10px;
         width: 100%;
     }
+    .disp_block{
+        display: block;
+
+    }
+    .txt_align{
+        text-align: center;
+    }
 }
 
 @media screen and (min-width:481px) and (max-width:560px){
