--- a/sarupriya/Task7/style.css
+++ b/sarupriya/Task7/style.css
@@ -143,6 +143,17 @@ a{
         margin-top: 10px;
         width: 100%;
     }
+    .nofloat_l1{
+        float: none;
+        margin-top: 10px;
+        width: 65%;
+    }
+    .dis_block1{
+        display: block;
+    }
+    .txt_align1{
+        text-align: center;
+    }
 }
 
 @media screen and (min-width:481px) and (max-width:560px){
