--- a/abinash/template 6/style.css
+++ b/abinash/template 6/style.css
@@ -81,6 +81,9 @@ body{
 .margin_a{
     margin: 0 auto;
 }
+.margin_bottom{
+    margin-bottom: 50px;
+}
 .margin{
     margin-top: 50px;
 }
@@ -125,3 +128,11 @@ body{
     color: white;
     text-align: center;
 }
+.bg_image{
+    background-image: url('img.jpeg');
+    height: 130px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+    
