--- a/abinash/template 6/style.css
+++ b/abinash/template 6/style.css
@@ -18,10 +18,10 @@ body{
     width: 68%;
 }
 .width_l3{
-    width: 49%;
+    width: 50%;
 }
 .width_r3{
-    width: 50%;
+    width: 49%;
 }
 .float_right{
     float: right;
@@ -51,8 +51,26 @@ body{
      padding-bottom: 15px;
      color: white;
 }
+.padding2{
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+.txt{
+    text-indent: 10px;
+}
+.txt_size{
+    font-size: 30px;
+    font-family:sans-serif;
+    font-weight: bold;
+}
+.border{
+    border: 1px solid gray;
+}
 .text_align{
     text-align: center;
+}
+.font{
+    line-height: normal;
 }
 .width_a{
     width: 98%;
@@ -64,7 +82,7 @@ body{
     margin: 0 auto;
 }
 .margin{
-    margin-top: 35px;
+    margin-top: 50px;
 }
 .padding{
     padding-top: 17px;
@@ -96,4 +114,14 @@ body{
 }
 .fa-twitter{
     color: #77bbfa;
+}
+.button1{
+    display:block;
+    width: 130px;
+    border-radius: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #77bbfa;
+    color: white;
+    text-align: center;
 }
