--- a/gayathri/tem4/style1.css
+++ b/gayathri/tem4/style1.css
@@ -2,6 +2,7 @@ body{
     margin: auto;
     padding: 0;
     background-color: #00802b;
+    padding-top: 10px;
 }
 .text_center{
     text-align: center;
