--- a/sarupriya/Bootstrap/style.css
+++ b/sarupriya/Bootstrap/style.css
@@ -23,6 +23,9 @@ body{
 .font_b{
     font-size: 115%;
 }
+.font_bc{
+    font-size: 98%;
+}
 .font_i{
     font-size: 108%;
 }
@@ -37,6 +40,9 @@ body{
 }
 .font_a{
     font-size: 100%;
+}
+.font_ab{
+    font-size: 92%;
 }
 .font_c{
     font-size: 55%;
@@ -64,7 +70,7 @@ body{
 }
 .padding{
     padding-top: 2%;
-    padding-bottom: 13%;
+    padding-bottom: 17%;
 }
 .bg_a{
     background-color: #524b4b;
@@ -73,7 +79,7 @@ body{
     background-color: #eb5161;
 }
 .bg_c{
-    background-color: #837a7a;
+    background-color: #555555;
 }
 .bg_d{
     background-color: #fadfdb;
@@ -139,7 +145,27 @@ body{
     color: #a19999;
     background-color: #af3440;
 }
-
+.bg_g{
+    background-color: #222222;
+}
+.bg_dark{
+    background-color: #111111;
+}
+.bg_dark1{
+    background-color: #333333;
+}
+.bg_h{
+    background-color: #464646;
+}
+.bg_i{
+    background-color: #626262;
+}
+.bg_j{
+    background-image: linear-gradient(to bottom,#626262,#333333);
+}
+.bg_k{
+    background-image: linear-gradient(to bottom,#fadfdb,#ed9180);
+}
 
 @media screen and (min-width:320px) and (max-width:480px){
     .nofloat{
