--- a/abinash/template 6/style.css
+++ b/abinash/template 6/style.css
@@ -18,7 +18,7 @@ body{
     width: 68%;
 }
 .width_l3{
-    width: 50%;
+    width: 15%;
 }
 .width_r3{
     width: 49%;
@@ -51,48 +51,21 @@ body{
      padding-bottom: 15px;
      color: white;
 }
+.text_align{
+    text-align: center;
+}
 .padding2{
     padding-top: 10px;
     padding-bottom: 15px;
 }
-.txt{
-    text-indent: 10px;
-}
-.txt_size{
-    font-size: 30px;
-    font-family:sans-serif;
-    font-weight: bold;
-}
-.border{
-    border: 1px solid gray;
-}
-.text_align{
-    text-align: center;
-}
-.font{
-    line-height: normal;
-}
-.width_a{
-    width: 98%;
-}
-.width_b{
-    width: 90%;
-}
-.margin_a{
-    margin: 0 auto;
-}
-.margin{
-    margin-top: 50px;
-}
+ .font_size{
+    font-size: 25px;
+ }
 .padding{
-    padding-top: 17px;
+    padding-top: 20px;    
 }
 .padding1{
-    padding-top: 12px;
-}
-.font_size{
-    font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif; 
+    padding-top: 15px;
 }
 .fa-square-youtube{
     color: #77bbfa;
@@ -115,13 +88,86 @@ body{
 .fa-twitter{
     color: #77bbfa;
 }
-.button1{
-    display:block;
-    width: 130px;
-    border-radius: 30px;
+.bg_image{
+    background-image: url(img.jpeg);
+    background-size: cover;
+    height: 150px;
+    margin-top: 15px;
+}
+.text_align1{
+    text-align: right;
+}
+.padding3{
+    padding-top: 50px;
+    padding-bottom: 50px;
+} 
+.margin_r1{
+    margin-right: 10px;
+}
+.width_a{
+    width: 98%;
+}
+.width_c{
+    width: 90%;
+}
+.width_b{
+    width: 85%;
+}
+.margin_a{
+    margin: 0 auto;
+}
+.margin_1{
+    margin-top: 50px;
+}
+.linespacing{
+    line-height: 20px;
+    list-style: none;
+}
+.padding4{
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: #77bbfa;
-    color: white;
-    text-align: center;
 }
+.padding5{
+    padding-top: 9px;
+    padding-bottom: 9px
+}
+.border{
+    border: 1px solid black;
+}
+.font_color{
+    color: gray;
+}
+.font_size2{
+    font-weight: bold;
+    font-size: 20px;
+}
+.padding6{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.margin_l3{
+    margin-left: 10px;
+}
+.button1{
+    display: block;
+    border-radius: 20px;
+    color:white;
+    background-color: #77bbfa;
+    width: 130px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.bg_color2{
+    background-color: white;
+}
+.bg_color3{
+    background-color: gray;
+}
+.margin_r2{
+    margin-right: 20px;
+}
+.margin_2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+ 
