--- a/abinash/template 6/style.css
+++ b/abinash/template 6/style.css
@@ -12,7 +12,7 @@ body{
     width: 58%;
 }
 .width_l1{
-    width: 20%;
+    width: 25%;
 }
 .width_l2{
     width: 68%;
@@ -20,14 +20,14 @@ body{
 .width_l3{
     width: 25%;
 }
-.width_r3{
-    width: 49%;
+.margin_r3{
+    margin-right: 30px;
 }
 .float_right{
     float: right;
 }
 .width_r1{
-    width: 70%;
+    width: 65%;
 }
 .width_r2{
     width: 30%;
@@ -47,8 +47,9 @@ body{
      background-color: #77bbfa;
      font-size: 15px;
      border-radius: 20px;
-     padding-top: 15px;
-     padding-bottom: 15px;
+     padding-top: 13px;
+     padding-bottom: 12px;
+     font-weight: bold;
      color: white;
 }
 .text_align{
@@ -58,12 +59,8 @@ body{
     padding-top: 10px;
     padding-bottom: 15px;
 }
-.txt{
-    text-indent: 10px;
-}
 .txt_size{
     font-size: 30px;
-    font-family:sans-serif;
     font-weight: bold;
 }
 .border{
@@ -72,26 +69,18 @@ body{
 .text_align{
     text-align: center;
 }
-.font{
-    line-height: normal;
-}
-.width_a{
-    width: 98%;
-}
-.width_b{
-    width: 90%;
-}
 .margin_a{
     margin: 0 auto;
 }
 .margin{
-    margin-top: 50px;
+    margin-top: 70px;
 }
 .padding{
     padding-top: 20px;    
 }
 .padding1{
     padding-top: 15px;
+    padding-bottom: 7px;
 }
 .fa-square-youtube{
     color: #77bbfa;
@@ -116,9 +105,8 @@ body{
 }
 .bg_image{
     background-image: url(img.jpeg);
-    background-size: cover;
-    height: 150px;
-    margin-top: 15px;
+    background-position: 100px;
+    height: 200px;
 }
 .text_align1{
     text-align: right;
@@ -142,9 +130,6 @@ body{
 .margin_a{
     margin: 0 auto;
 }
-.margin_1{
-    margin-top: 50px;
-}
 .linespacing{
     line-height: 20px;
     list-style: none;
@@ -161,11 +146,11 @@ body{
     border: 1px solid black;
 }
 .font_color{
-    color: gray;
+    color: rgb(151, 151, 151);
 }
 .font_size2{
     font-weight: bold;
-    font-size: 20px;
+    font-size: 30px;
 }
 .padding6{
     padding-top: 10px;
@@ -180,8 +165,8 @@ body{
     color:white;
     background-color: #77bbfa;
     width: 130px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 .bg_color2{
     background-color: white;
@@ -195,4 +180,26 @@ body{
 .margin_2{
     margin-top: 10px;
     margin-bottom: 10px;
+}
+.padding7{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.font_size{
+    font-size: 25px;
+}
+.font{
+    font-family: sans-serif;
+}
+.bg_color4{
+    background-color: gray;
+}
+.font_f{
+    font-family:  'Pangolin', cursive;
+}
+.margin_bottom{
+    margin-bottom: 50px;
+}
+.font_size3{
+    font-size: 50px;
 }
