--- a/gayathri/tem4/style3.css
+++ b/gayathri/tem4/style3.css
@@ -20,8 +20,8 @@ body{
 .float_right{
     float: right;
 }
-.width68{
-    width: 68%;
+.width60{
+    width: 60%;
 }
 .width30{
     width: 30%;
@@ -59,6 +59,9 @@ body{
 .padding4{
     padding-top: 70px;
     padding-bottom: 70px;
+}
+.width12{
+    width: 12%;
 }
 
 
