final bootstrap file  update

--- a/sarupriya/Bootstrap/style.css
+++ b/sarupriya/Bootstrap/style.css
@@ -274,6 +274,9 @@ body{
     .width5{
         width: 25%;
     }
+    .text{
+        text-align: left;
+    }
 }
 @media screen and (min-width:992px) and (max-width:1199px){
     .txt_align{
@@ -287,5 +290,8 @@ body{
     }
     .width6{
         width: 20%;
+    }
+    .text{
+        text-align: left;
     }
 }
