--- a/gayathri/tem4/style3.css
+++ b/gayathri/tem4/style3.css
@@ -1,69 +1,119 @@
-body{
+body {
     margin: auto;
     padding: 0;
     background-color: #00802b;
     padding-top: 20px;
 }
-.border{
+.border {
     border: 1px solid black;
 }
-.margin{
+.margin {
     margin-bottom: 10px;
 }
-.padding{
+.padding {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-.float_left{
+.float_left {
     float: left;
 }
-.float_right{
+.float_right {
     float: right;
 }
-.width60{
-    width: 60%;
+.width68 {
+    width: 68%;
 }
-.width30{
+.width30 {
     width: 30%;
 }
-.padding1{
+.padding1 {
     padding-bottom: 10px;
 }
-.margin_auto{
+.margin_auto {
     margin: 0 auto;
     margin-bottom: 10px;
 }
-.width{
+.width {
     width: 95%;
 }
-.text_indent{
+.text_indent {
     text-indent: 10px;
 }
-.bgcolor1{
-    background-color:  #b3ffb3;
+.bgcolor1 {
+    background-color: #b3ffb3;
 }
-.bgcolor2{
+
+.bgcolor2 {
     background-color: #ffffff;
 }
-.text_center{
+
+.text_center {
     text-align: center;
 }
-.padding2{
+
+.padding2 {
     padding-top: 40px;
     padding-bottom: 40px;
 }
-.padding3{
+
+.padding3 {
     padding-top: 50px;
     padding-bottom: 50px;
 }
-.padding4{
+
+.padding6{
     padding-top: 70px;
     padding-bottom: 70px;
 }
-.width12{
-    width: 12%;
+
+.width48 {
+    width: 48%;
 }
 
+.bgcolor3 {
+    background-color: #b3ffb3;
+}
 
-
-
+.aside_container {
+    position: relative;
+    height: 100%;
+}
+.aside_left,
+.aside_right {
+    position: absolute;
+    top: 0;
+}
+.aside_left {
+    left: 0;
+}
+.aside_right {
+    right: 0;
+}
+.third_aside {
+    clear: both;
+    margin-top: 146px; 
+}
+.aside_contentA {
+    padding: 50px;
+}
+.aside_contentB {
+    padding: 10px;
+}
+.aside_left,
+.aside_right,
+.third_aside {
+    height: 108px; 
+}
+.padding5 {
+padding: 7px;
+}
+.widthS {
+    width: 18%;
+}
+.padding3{
+    padding-left: 0px;
+}
+.padding6{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
