--- a/vigneshwaran/style.css
+++ b/vigneshwaran/style.css
@@ -15,3 +15,12 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.float_left{
+    float: left;
+}
+.float_right{
+    float: right;
+}
+.width{
+    width: 49%;
+}
