--- a/vigneshwaran/float/style.css
+++ b/vigneshwaran/float/style.css
@@ -6,7 +6,7 @@ body{
     text-align: center;
 }
 .border{
-    border: 10px solid grey;
+    border: 1px solid black;
 }
 .margin{
     margin-bottom: 10px;
@@ -25,5 +25,9 @@ body{
     width: 60%;
 }
 .width_right{
-    width: 30%;
+    width: 39%;
+}
+.padding1{
+    padding-top: 35px;
+    padding-bottom: 35px;
 }
