--- a/tem4/style1.css
+++ b/tem4/style1.css
@@ -2,7 +2,6 @@ body{
     margin: auto;
     padding: 0;
     background-color: #00802b;
-    padding-top: 10px;
 }
 .text_center{
     text-align: center;
@@ -22,7 +21,7 @@ body{
     padding-bottom: 10px;
 }
 .bgcolor{
-    background-color: #8cff66;
+    background-color:  #b3ffb3;
 }
 .margin_auto{
     margin: 0 auto;
