--- a/gayathri/tem4/style3.css
+++ b/gayathri/tem4/style3.css
@@ -36,7 +36,7 @@ body {
     text-indent: 10px;
 }
 .bgcolor1 {
-    background-color: #8cff66;
+    background-color: #a3d692;
 }
 .bgcolor2 {
     background-color: #ffffff;
@@ -65,4 +65,6 @@ body {
 .width90{
     width: 90%;
 }
-
+.marginn{
+    margin-bottom: 10px;
+}
