--- a/abinash/template 6/style.css
+++ b/abinash/template 6/style.css
@@ -15,7 +15,7 @@ body{
     width: 27%;
 }
 .width_l2{
-    width: 72%;
+    width: 75%;
 }
 .width_l3{
     width: 24.25%;
@@ -27,10 +27,13 @@ body{
     float: right;
 }
 .width_r1{
-    width: 70%;
+    width: 75%;
+}
+.width_25{
+    width: 25%;
 }
 .width_r2{
-    width: 28%;
+    width: 22%;
 }
 .margin_r{
     margin-right: 20px;
@@ -45,10 +48,10 @@ body{
      display: inline-block;
      width: 210px;
      background-color: #77bbfa;
-     font-size: 16px;
+     font-size: 14px;
      border-radius: 20px;
-     padding-top: 15px;
-     padding-bottom: 15px;
+     padding-top: 13px;
+     padding-bottom: 13px;
      font-weight: bold;
      color: white;
 }
@@ -76,11 +79,17 @@ body{
     margin-top: 70px;
 }
 .padding{
-    padding-top: 30px;    
+    padding-top: 10px;
+    padding-bottom: 10px;
+         
 }
 .padding1{
+    padding-top: 7px;
+     
+}
+.padding2{
     padding-top: 15px;
-    padding-bottom: 6px;
+    padding-bottom: 15px;
 }
 .fa-square-youtube{
     color: #77bbfa;
@@ -181,12 +190,15 @@ body{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.margin_3{
+    margin-bottom: 10px;
+}
 .padding7{
     padding-top: 50px;
     padding-bottom: 50px;
 }
 .font_size{
-    font-size: 30px;
+    font-size: 27px;
 }
 .font{
     font-family: sans-serif;
@@ -198,7 +210,7 @@ body{
     font-family:  'Pangolin', cursive;
 }
 .margin_bottom{
-    margin-bottom: 50px;
+    margin-bottom: 70px;
 }
 .font_size3{
     font-size: 50px;
