--- a/abinash/template 6/style.css
+++ b/abinash/template 6/style.css
@@ -12,10 +12,10 @@ body{
     width: 65%;
 }
 .width_l1{
-    width: 25%;
+    width: 10%;
 }
 .width_l2{
-    width: 50%;
+    width: 69%;
 }
 .width_l3{
     width: 24.25%;
@@ -27,8 +27,9 @@ body{
     float: right;
 }
 .width_r1{
-    width: 75%;
+    width: 87%;
 }
+ 
 .width_r2{
     width: 28%;
 }
@@ -43,21 +44,23 @@ body{
 }
 .button{
      display: inline-block;
-     width: 190px;
+     width: 160px;
      background-color: #77bbfa;
-     font-size: 14px;
+     font-size: 13px;
      border-radius: 20px;
-     padding-top: 13px;
-     padding-bottom: 13px;
+     padding-top: 10px;
+     padding-bottom: 10px;
      font-weight: bold;
      color: white;
+     text-align: center;
 }
 .text_align{
     text-align: center;
 }
 .padding2{
-    padding-top: 10px;
-    padding-bottom: 15px;
+    padding-top: 15px;
+    padding-bottom: 9px;
+    
 }
 .txt_size{
     font-size: 30px;
@@ -77,11 +80,11 @@ body{
 }
 .padding{
     padding-top: 10px;  
-    padding-bottom: 20px;  
+    padding-bottom: 10px;  
 }
 .padding1{
     padding-top: 12px;
-    padding-bottom: 15px;
+    padding-bottom: 9px;
      
 }
 .padding2{
@@ -201,7 +204,7 @@ body{
     padding-bottom: 50px;
 }
 .font_size{
-    font-size: 24px;
+    font-size: 18px;
 }
 .font{
     font-family: sans-serif;
