--- a/vigneshwaran/flo/flc.css
+++ b/vigneshwaran/flo/flc.css
@@ -19,7 +19,13 @@ body{
     background-color:rgb(12, 120, 97);
 }
 .font{
+    font-size: 25px;
+    color: white;
+    font-weight: bold;
+}
+.font1{
     font-size: 15px;
+
 }
 .float-l{
     float: left;
