--- a/sarupriya/JavaScript/style.css
+++ b/sarupriya/JavaScript/style.css
@@ -8,3 +8,19 @@ body{
 .txtalign{
     text-align: center;
 }
+.bg_b{
+    background-color: #fadfdb;
+}
+.color{
+    color: #ed9180;
+}
+.width{
+    width: 60%;
+    margin: 0 auto;
+}
+.color_a{
+    color: #fc9b8a;
+}
+.font_f{
+    font-family: 'Pangolin', cursive;
+}
