--- a/abinash/Template_8/Task_8/style.css
+++ b/abinash/Template_8/Task_8/style.css
@@ -12,7 +12,7 @@ body{
     width: 30%;
 }
 .width_right{
-    width: 68%;
+    width: 56%;
 }
 .width_l1{
     width: 20%;
@@ -20,11 +20,17 @@ body{
 .width_r1{
     width: 78%;
 }
+.width_l2{
+    width: 43%;
+}
 .width{
     width: 90%;
 }
 .width_a{
     width: 95%;
+}
+.width_b{
+    width: 98%;
 }
 .margin{
     margin: 0 auto;
@@ -33,10 +39,10 @@ body{
     background-color: white;
 }
 .bg_color1{
-    background-color: rgb(99, 99, 99);
+    background-color: rgb(65, 73, 65);
 }
 .bg_color2{
-    background-color: rgb(218, 218, 176);
+    background-color: rgb(209, 209, 160);
 }
 .border{
     border-top: 1px solid gray;
@@ -65,6 +71,14 @@ body{
     border-left: 1px solid rgb(121, 124, 92);
     border-right: 1px solid rgb(121, 124, 92);
     border-bottom: 1px solid rgb(121, 124, 92);
+    border-radius: 0px 0px 10px 10px ;
+}
+.border_5{
+    border: 1px solid grey;
+    border-radius: 15px;
+}
+.font{
+    font-style: italic;
 }
 .font_s1{
     font-size: 30px;
@@ -74,13 +88,21 @@ body{
     font-size: small;
 }
 .font_s3{
-    font: 10px;
+    font:10px;
+    font-weight: 600;
+    color: rgb(51, 48, 48);
 }
 .font_s4{
     font-size: 20px;
 }
 .font_s5{
-    font: 30px;    
+    font: 35px;    
+}
+.font_s6{
+    font-size: 25px;
+}
+.font_s7{
+    font-size:  25px;
 }
 .font_c1{
     color: rgb(199, 199, 106);
@@ -103,6 +125,13 @@ body{
 .padding5{
     padding-bottom: 45px;
 }
+.padding6{
+    padding-top: 20px;
+}
+.padding7{
+    padding-top: 7px;
+    padding-bottom: 12px;
+}
 .font_f{
     font-family: sans-serif;
 }
@@ -114,5 +143,15 @@ body{
     color: rgb(190, 190, 118);
 }
 .margin_l{
-    margin-left: 10px;
+    margin-left: 50px;
+}
+.padding8{
+    padding-top: 25px;
+    
+}
+.txt{
+    text-indent: 20px;
+}
+.margin_t{
+    margin-top: 10px;
 }
