--- a/vigneshwaran/flo/v.css
+++ b/vigneshwaran/flo/v.css
@@ -71,6 +71,6 @@ body{
 .padding1{
     padding-top: 140px;
     padding-bottom: 141.8px;
-    margin-top: 2px;
-    margin-bottom: 1px;
+    /* margin-top: 2px;
+    margin-bottom: 1px; */
 }
