--- a/abinash/Template_8/Task_8/style.css
+++ b/abinash/Template_8/Task_8/style.css
@@ -9,10 +9,10 @@ body{
     float: right;
 }
 .width_left{
-    width: 30%;
+    width: 40%;
 }
 .width_right{
-    width: 56%;
+    width: 58%;
 }
 .width_l1{
     width: 20%;
@@ -24,10 +24,10 @@ body{
     width: 43%;
 }
 .width{
-    width: 90%;
+    width: 95%;
 }
 .width_a{
-    width: 95%;
+    width: 93%;
 }
 .width_b{
     width: 98%;
@@ -52,7 +52,7 @@ body{
 }
  
 .padding{
-    padding-top: 50px;
+    padding-top: 90px;
 }
 .margin1{
     margin-bottom: 10px;
@@ -70,13 +70,14 @@ body{
 .border4{
     border-left: 1px solid rgb(121, 124, 92);
     border-right: 1px solid rgb(121, 124, 92);
-    border-bottom: 1px solid rgb(121, 124, 92);
-    border-radius: 0px 0px 10px 10px ;
 }
 .border_5{
-    border: 1px solid grey;
-    border-radius: 15px;
+     border-top: 1px solid rgb(121, 124, 92);
+     border-left: 1px solid rgb(121, 124, 92);
+     border-right: 1px solid rgb(121, 124, 92);
+     border-radius: 10px 10px 0px 0px;
 }
+     
 .font{
     font-style: italic;
 }
@@ -89,11 +90,11 @@ body{
 }
 .font_s3{
     font:10px;
-    font-weight: 600;
-    color: rgb(51, 48, 48);
+    font-weight: 500;
+    
 }
 .font_s4{
-    font-size: 20px;
+    font-size: 25px;
 }
 .font_s5{
     font: 35px;    
@@ -108,7 +109,7 @@ body{
     color: rgb(199, 199, 106);
 }
 .font_c2{
-    color: rgb(98, 131, 33);
+    color: rgb(64, 83, 24);
 }
 .padding1{
     padding-top: 13px;
@@ -123,7 +124,7 @@ body{
     padding-top: 30px;
 }
 .padding5{
-    padding-bottom: 45px;
+    padding-bottom: 40px;
 }
 .padding6{
     padding-top: 20px;
@@ -131,6 +132,9 @@ body{
 .padding7{
     padding-top: 7px;
     padding-bottom: 12px;
+}
+.padding8{
+    padding-top: 7px;
 }
 .font_f{
     font-family: sans-serif;
