--- a/abinash/Template_8/Task_8/style.css
+++ b/abinash/Template_8/Task_8/style.css
@@ -39,15 +39,15 @@ body{
     background-color: white;
 }
 .bg_color1{
-    background-color: rgb(65, 73, 65);
+    background-color: rgb(66, 71, 66);
 }
 .bg_color2{
     background-color: rgb(209, 209, 160);
 }
 .border{
-    border-top: 1px solid gray;
-    border-right:  1px solid gray;
-    border-left:  1px solid gray;
+    border-top: 3px solid gray;
+    border-right:  3px solid gray;
+    border-left:  3px solid gray;
     border-radius: 15px 15px 0px 0px ;
 }
  
@@ -68,13 +68,13 @@ body{
     border: 2px dashed rgb(204, 204, 135);
 }
 .border4{
-    border-left: 1px solid rgb(121, 124, 92);
-    border-right: 1px solid rgb(121, 124, 92);
+    border-left: 3px solid rgb(121, 124, 92);
+    border-right: 3px solid rgb(121, 124, 92);
 }
 .border_5{
-     border-top: 1px solid rgb(121, 124, 92);
-     border-left: 1px solid rgb(121, 124, 92);
-     border-right: 1px solid rgb(121, 124, 92);
+     border-top: 3px solid rgb(121, 124, 92);
+     border-left: 3px solid rgb(121, 124, 92);
+     border-right: 3px solid rgb(121, 124, 92);
      border-radius: 10px 10px 0px 0px;
 }
      
@@ -85,9 +85,7 @@ body{
     font-size: 30px;
     font-weight: bold;
 }
-.font_s2{
-    font-size: small;
-}
+ 
 .font_s3{
     font:10px;
     font-weight: 500;
@@ -140,7 +138,11 @@ body{
     font-family: sans-serif;
 }
 .linespacing{
-    line-height: 20px;
+    line-height: 25px;
+    list-style: none;
+}
+.linespacing1{
+    line-height: 23px;
     list-style: none;
 }
 .fa-right-long{
