--- a/abinash/Template_8/Task_8/style.css
+++ b/abinash/Template_8/Task_8/style.css
@@ -161,3 +161,16 @@ body{
 .margin_t{
     margin-top: 10px;
 }
+
+@media only screen and (min-width:320px ) and (max-width:480px){
+    .nofloat{
+        float: none;
+        width: 100%;
+    }
+}
+@media only screen and (min-width:481px ) and (max-width:620px){
+    .nofloat{
+        float: none;
+        width: 100%;
+    }
+}
