--- a/vigneshwaran/flo/vi.css
+++ b/vigneshwaran/flo/vi.css
@@ -32,7 +32,7 @@ body{
 }
 .margin3{
     width: 100%;
-    border-top: 5px solid rgb(169, 209, 142);
+    border-top: 10px solid rgb(169, 209, 142);
 }
 .padding1{
     padding-bottom: 40px;
@@ -41,11 +41,11 @@ body{
     border: 5px solid rgb(169, 209, 142);
 }
 .wfl{
-    width: 60%;
+    width: 70%;
     float: left;
 }
 .wfr{
-    width: 39%;
+    width: 29%;
     float: right;
 }
 .padding2{
@@ -53,8 +53,8 @@ body{
     padding-bottom: 10px;
 }
 .padding3{
-    padding-top: 45.5px;
-    padding-bottom: 45.5px;
+    padding-top: 48px;
+    padding-bottom: 48px;
 }
 .padding4{
     padding-top: 20px;
@@ -72,5 +72,27 @@ body{
     float: right;
 }
 .border1{
-    border: 5px solid rgb(43, 138, 62);
+    border-right: 10px solid rgb(43, 138, 62);
+}
+.text1{
+    text-indent: 5px;
+}
+.padding6{
+    padding-top: 45px;
+    padding-bottom: 45px;
+}
+.margin4{
+    width: 99%;
+    margin: 0 auto;
+}
+.margin5{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.padding7{
+    padding-top: 25px;
+    padding-bottom: 40px;
+}
+.margin6{
+    margin-top: 10px;
 }
