--- a/abinash/Template_8/Task_8/style.css
+++ b/abinash/Template_8/Task_8/style.css
@@ -161,3 +161,45 @@ body{
 .margin_t{
     margin-top: 10px;
 }
+
+@media only screen and (min-width:320px) and (max-width:480px) {
+   .nofloat{
+    float: none;
+    width: 100%;
+   }
+}
+
+@media only screen and (min-width:481px) and (max-width:560px) {
+    .nofloat{
+     float: none;
+     width: 100%;
+    }
+ }
+
+ @media only screen and (min-width:561px) and (max-width:620px) {
+    .nofloat{
+     float: none;
+     width: 100%;
+    }
+ }
+
+ @media only screen and (min-width:621px) and (max-width:768px) {
+    .nofloat{
+     float: none;
+     width: 100%;
+    }
+ }
+
+ @media only screen and (min-width:769px) and (max-width:992px) {
+    .nofloat{
+     float: none;
+     width: 100%;
+    }
+ }
+
+ @media only screen and (min-width:993px) and (max-width:1024px) {
+    .nofloat{
+     float: none;
+     width: 100%;
+    }
+ }
