--- a/vigneshwaran/web/web.css
+++ b/vigneshwaran/web/web.css
@@ -25,8 +25,8 @@ body{
     padding-bottom: 20px;
 }
 .padding0{
-    padding-top: 29px;
-    padding-bottom: 29px;
+    padding-top: 26px;
+    padding-bottom: 26px;
 }
 .border{
     border-bottom: 10px solid rgb(224, 129, 71);
@@ -71,15 +71,77 @@ button{
     color: rgb(199, 99, 14);
 }
 .font-style2{
+    font-size: 10px;    
+    font-weight: italic;
+}
+.font-style3{
     font-size: 10px;
     font-weight: bold;
 }
+.font-style4{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(158, 64, 10);
+}
+.font-style5{
+    font-size: 10px;
+    font-weight: bold;
+    color: rgb(118, 74, 49);
+}
+.font-style6{
+    font-size: 12px;
+    font-weight: bold;
+}
+.font-style7{
+    font-size: 10px;
+    font-weight: bold;
+    color: rgb(139, 60, 0);
+}
+.font-style8{
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+.font-style9{
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+}
+.font-style10{
+    font-size: 10px;
+    font-weight: bold;
+    color: rgb(118, 74, 49);
+}
+.feet{
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(234, 162, 104);
+    border-radius: 3px;
+    margin-right: 5px;
+}
+.tweet{
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(130, 197, 205);
+    border-radius: 3px;
+    margin-right: 5px;
+}
+.face{
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(75, 104, 164);
+    border-radius: 3px;
+    margin-right: 5px;
+}
 .wfl1{
-    width: 60%;
+    width: 70%;
     float: left;
 }
 .wfr1{
-    width: 40%;
+    width: 30%;
     float: right;
 }
 .padding1{
@@ -95,12 +157,11 @@ button{
     border: 1px solid black;
 }
 .box1{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     background-color: white;
-    border: 1px solid black;
+    border: 4px double rgb(255, 190, 86);
 }
 .box2{
     margin-top: 15px;
@@ -125,4 +186,15 @@ button{
 .wfr2{
     width: 60%;
     float: right;
+}
+.wfl3{
+    width: 60%;
+    float: left;
+}
+.wfr3{
+    width: 40%;
+    float: right;
+}
+.widths{
+    text-indent: 80px;
 }
